<resources>
    <string name="app_name">予见门店端</string>
    <string name="order_apply">首页</string>
    <string name="order">申请列表</string>
    <string name="msg_center">消息中心</string>
    <string name="mine">我的</string>
    <string name="number_1">&#xe901;</string>
    <string name="number_2">&#xe902;</string>
    <string name="number_3">&#xe903;</string>
    <string name="all_right">&#xe900;</string>


    <!--我的模块-->
    <string name="main_employee">员工管理</string>
    <string name="main_calculator">融资计算器</string>
    <string name="main_setting">设置</string>
    <string name="main_service">联系客服</string>
    <!--设置模块-->
    <string name="main_setting_title">设置</string>
    <string name="main_setting_agreement">用户协议</string>
    <string name="main_setting_version_name">版本信息</string>
    <string name="main_setting_version_code">1.0.0</string>
    <string name="main_setting_logout">退出登录</string>

    <string name="mine_logout_dialog_title">提示</string>
    <string name="mine_logout_dialog_msg">是否退出登录</string>
    <string name="mine_logout_dialog_sure">确定</string>
    <string name="mine_logout_dialog_cancle">取消</string>
    <string name="order_detail_plan_reply_total">***</string>
    <string name="order_detail_sale_name">***</string>
    <string name="order_detail_customer_name">***</string>
    <string name="order_detail_customer_card">***</string>

    <string name="order_item_price_get">***元</string>
    <string name="order_item_store">经销商：%1$s</string>
    <string name="commit">提交成功</string>
    <string name="spouse_info">配偶资料</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
