<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <FrameLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="7dp"
            android:layout_gravity="bottom"
            android:background="@mipmap/shadow_h_line" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="1dp"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/main_tab_order_apply"
                style="@style/tab"
                android:checked="true"
                android:drawableTop="@drawable/tab_order_apply_selector"
                android:text="@string/order_apply" />

            <RadioButton
                android:id="@+id/main_tab_order"
                style="@style/tab"
                android:drawablePadding="1dp"
                android:drawableTop="@drawable/tab_order_selector"
                android:paddingTop="9dp"
                android:text="@string/order" />

            <RadioButton
                android:id="@+id/main_tab_mine"
                style="@style/tab"
                android:drawableTop="@drawable/tab_mine_selector"
                android:text="@string/mine" />

        </RadioGroup>
    </LinearLayout>
</LinearLayout>