<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/main_bg"
              android:orientation="vertical"
    >

    <include
        android:id="@+id/title_bar"
        layout="@layout/base_titlebar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/order_detail_sign_layout"
        android:layout_below="@id/title_bar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="vertical">

                <RelativeLayout
                    android:onClick="onClick"
                    android:id="@+id/main_setting_agreement_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:descendantFocusability="blocksDescendants">


                    <TextView
                        android:id="@+id/main_setting_agreement"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="15dp"
                        android:text="@string/main_setting_agreement"
                        android:textColor="@color/text_normal"
                        android:textSize="16sp"/>

                    <ImageView
                        android:id="@+id/main_setting_agreement_next"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="15dp"
                        android:background="@android:color/transparent"
                        android:src="@mipmap/right_arrow"/>

                    <View
                        android:id="@+id/main_setting_agreement_line"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/main_setting_agreement"
                        android:layout_marginLeft="15dp"
                        android:background="@color/main_driver"/>
                </RelativeLayout>

                <RelativeLayout
                    android:onClick="onClick"
                    android:id="@+id/main_setting_version_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:descendantFocusability="blocksDescendants">


                    <TextView
                        android:id="@+id/main_setting_version_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="15dp"
                        android:text="@string/main_setting_version_name"
                        android:textColor="@color/text_normal"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/settings_version_code_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_margin="15dp"
                        android:text="V1.0.0"
                        android:textColor="#FF333333"
                        android:textSize="14sp"/>

                    <View
                        android:id="@+id/main_setting_version_name_line"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_below="@id/main_setting_version_name"
                        android:background="@color/main_driver"/>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_setting_logout_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:onClick="onClick"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:descendantFocusability="blocksDescendants">


                    <TextView
                        android:id="@+id/main_setting_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="15dp"
                        android:text="@string/main_setting_logout"
                        android:textColor="@color/text_normal"
                        android:textSize="16sp"/>


                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>