<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/mine_fragment_info_lin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y847"
        android:background="#FF2D2F3B"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:visibility="visible">

        <ImageView
            android:layout_width="@dimen/x305"
            android:layout_height="@dimen/y305"
            android:layout_above="@+id/mine_name_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/y12"
            android:alpha="0.6"
            android:src="@mipmap/mine_head_pic" />

        <TextView
            android:id="@+id/mine_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mine_mobile_tv"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/y23"
            android:text="高育良"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/y58" />

        <ImageView
            android:id="@+id/mine_role_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/mine_name_tv"
            android:layout_alignTop="@id/mine_name_tv"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/mine_name_tv"
            android:src="@mipmap/mine_jr" />

        <TextView
            android:id="@+id/mine_mobile_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mine_desc_tv"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/y58"
            android:text="17621062314"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/y40" />

        <TextView
            android:id="@+id/mine_desc_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mine_line_img"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/y23"
            android:text="予见汽车  贴心无处不在"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/y40" />

        <ImageView
            android:id="@+id/mine_line_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginBottom="@dimen/y66"
            android:src="@mipmap/mine_line" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/mine_fragment_employee_tv"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@mipmap/icon_employee" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/main_employee"
                android:textColor="@color/text_normal"
                android:textSize="16sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@mipmap/right_arrow" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/mine_fragment_calculator_tv"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@mipmap/icon_calculator" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/main_calculator"
                android:textColor="@color/text_normal"
                android:textSize="16sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@mipmap/right_arrow" />
        </LinearLayout>

        <include layout="@layout/include_line" />

        <LinearLayout
            android:id="@+id/mine_fragment_helper_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y138"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/helper" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="小助手"
                android:textColor="@color/text_normal"
                android:textSize="@dimen/y43" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@mipmap/right_arrow" />
        </LinearLayout>

        <include layout="@layout/include_line" />

        <LinearLayout

            android:id="@+id/mine_fragment_about_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y138"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@mipmap/about" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="关于予见汽车"
                android:textColor="@color/text_normal"
                android:textSize="@dimen/y43" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@mipmap/right_arrow" />
        </LinearLayout>

        <include layout="@layout/include_line" />

        <View
            android:background="@color/main_bg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y29"/>

        <include layout="@layout/include_line" />

        <LinearLayout
            android:id="@+id/mine_fragment_setting_tv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y138"
            android:background="#fff"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@mipmap/icon_setting" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/main_setting"
                android:textColor="@color/text_normal"
                android:textSize="@dimen/y43" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@mipmap/right_arrow" />
        </LinearLayout>

        <include layout="@layout/include_line" />

    </LinearLayout>
</LinearLayout>
